--- a/src/style.css
+++ b/src/style.css
@@ -163,9 +163,7 @@ header,
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
-  gap: 2.5rem;
-  padding: 5rem 10vw;
+  padding: 2rem 5rem;
   text-align: left;
   color: var(--color-noir);
 }
@@ -298,6 +296,15 @@ header,
     pointer-events: none;
   }
 
+  .section__content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 30rem;
+    margin-inline: auto;
+  }
+
   .section__goutte {
     position: absolute;
     left: 14vw;
@@ -311,7 +318,6 @@ header,
 
   .section__desc {
     max-width: 30rem;
-    margin-top: 10rem;
   }
 
   .section__descvalue {
