--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,8 @@
   --color-noir: #232323;
 
   --color-darkblue: #2f4157;
-  --color-lightblue: #b6d0d4;
+  --color-lightblue: #79b1bd;
+  --color-lightblue-2: #b6d0d4;
 
   --color-pink: #fa5dae;
   --color-lightpink: #f7a6cd;
