--- a/src/style.css
+++ b/src/style.css
@@ -477,7 +477,9 @@ header,
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 15rem;
+    justify-content: space-between;
+    gap: 2rem;
+    height: 100%;
   }
 }
 
