--- a/src/style.css
+++ b/src/style.css
@@ -214,7 +214,7 @@ header,
 }
 
 .section__descvalue--xl {
-  font-size: 6.3615rem; /* ancien .section8__descvalue */
+  font-size: 6.3615rem;
 }
 
 .section__big {
@@ -573,7 +573,7 @@ header,
   height: 37.5rem;
 }
 
-/* SECTION 11 (référence) */
+/* SECTION 11 */
 .section--11 {
   background-color: var(--color-lightpink);
   color: var(--color-noir);
@@ -586,7 +586,7 @@ header,
     align-items: center;
     justify-content: center;
     align-self: center;
-    gap: 30rem;
+    gap: 20rem;
     margin: auto;
   }
   .section__desc {
@@ -601,6 +601,15 @@ header,
     align-self: center;
     gap: 3rem;
   }
+}
+
+.jean {
+  width: 12rem;
+  height: auto;
+}
+.tshirt {
+  width: 10rem;
+  height: auto;
 }
 
 /* SECTION 12 */
